force-app/main/default/objects/ssot__DocumentChecklistItem__dlm/fields/ssot__DocumentChecklistItemStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__DocumentChecklistItemStatus__c</fullName>
    <label>Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DocumentChecklistItemStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>