force-app/main/default/objects/ssot__DocumentChecklistItem__dlm/fields/ssot__FileOwnerObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__FileOwnerObject__c</fullName>
    <label>File Owner Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FileOwnerObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>