force-app/main/default/objects/ssot__DocumentChecklistItem__dlm/fields/ssot__InstructionsText__c.field-meta.xml
<CustomField>
    <fullName>ssot__InstructionsText__c</fullName>
    <label>Instructions</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InstructionsText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>