force-app/main/default/objects/ssot__DocumentChecklistItem__dlm/fields/ssot__IsFrozen__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsFrozen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Frozen</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsFrozen</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>