force-app/main/default/objects/ssot__DocumentChecklistItem__dlm/fields/ssot__ReceivedDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReceivedDocumentId__c</fullName>
    <label>Received Document</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReceivedDocumentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>