force-app/main/default/objects/ssot__DocumentChecklistItem__dlm/fields/ssot__rel_1741334703667_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1741334703667_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocumentChecklistItem_AccountId_map__rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>DocumentChecklistItem_AccountId_map__rel</relationshipLabel>
    <relationshipName>rel_1741334703667_end</relationshipName>
    <type>Lookup</type>
</CustomField>