force-app/main/default/objects/ssot__DocumentChecklistItem__dlm/fields/ssot__rel_1741334710580_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1741334710580_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocumentChecklistItem_FileOwnerId_ma_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>DocumentChecklistItem_FileOwnerId_ma_rel</relationshipLabel>
    <relationshipName>rel_1741334710580_end</relationshipName>
    <type>Lookup</type>
</CustomField>