force-app/main/default/objects/ssot__DocumentChecklistItem__dlm/fields/ssot__TransformationInfoText__c.field-meta.xml
<CustomField>
    <fullName>ssot__TransformationInfoText__c</fullName>
    <label>Transformation Info</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TransformationInfoText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>