force-app/main/default/objects/ssot__DocumentChecklistItem__dlm/fields/ssot__UploadedById__c.field-meta.xml
<CustomField>
    <fullName>ssot__UploadedById__c</fullName>
    <label>Uploaded By</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UploadedById</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>