force-app/main/default/objects/ssot__DocumentChecklistItem__dlm/fields/ssot__ValidatedBy__c.field-meta.xml
<CustomField>
    <fullName>ssot__ValidatedBy__c</fullName>
    <label>Validated By</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ValidatedBy</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>