force-app/main/default/objects/ssot__DocumentChecklistItem__dlm/fields/ssot__ValidationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ValidationDateTime__c</fullName>
    <label>Validation Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ValidationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>